fix(style): gaps improved

--- a/src/app/pages/speakers/speaker-details/speaker-details.component.scss
+++ b/src/app/pages/speakers/speaker-details/speaker-details.component.scss
@@ -1,9 +1,9 @@
 .container {
   display: grid;
-  $gap: 32px;
-  grid-gap: $gap;
-  padding-top: $gap / 2;
-  padding-bottom: $gap / 2;
+  $gap: 24px;
+  grid-gap: $gap * 2;
+  padding-top: $gap;
+  padding-bottom: $gap;
 
   @media (min-width: 600px) {
     grid-template-columns: 6fr 9fr;
